client-go/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: gf-space
spec:
  selector:
    app: client
  ports:
  - port: 8080
    targetPort: 8080
